# Battery-Feature-Lab

./: .gitignore  LICENSE  README.md  pyproject.toml
battery_feature_lab/: __init__.py  api.py  cli.py  constants.py  pipeline.py  schemas.py
battery_feature_lab/analysis/: __init__.py  degradation_tags.py  feature_selection.py  shap_report.py
battery_feature_lab/bds_adapter/: __init__.py  readers.py  validators.py
battery_feature_lab/core/: __init__.py  cycle_splitter.py  integration.py  resampling.py  smoothing.py  units.py
battery_feature_lab/export/: __init__.py  llm_json_writer.py  parquet_writer.py
battery_feature_lab/featurizers/: __init__.py  base.py  common.py  cycle_summary.py  delta_q.py  eis_drt.py  ica_dva.py  relaxation.py  stress_histogram.py
battery_feature_lab/validation/: __init__.py  dataset_validation.py
bfl/: __init__.py
docs/: DOMAIN_KNOWLEDGE.md  FEATURE_RESEARCH.md  IMPLEMENTATION_PLAN.md
examples/: BFL_example.ipynb
scripts/: validate_on_dataset.py
tests/: test_pipeline.py
