[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bfl"
version = "0.1.0"
description = "Feature extraction pipeline for battery cycling, BDS exports, and LLM-ready battery diagnostics."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "BFL contributors" }]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.9",
  "scikit-learn>=1.2",
  "pyarrow>=10.0",
]

[project.optional-dependencies]
explain = ["shap>=0.43", "xgboost>=1.7", "lightgbm>=4.0"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
bfl = "battery_feature_lab.cli:main"
battery-features = "battery_feature_lab.cli:main"

[tool.setuptools.packages.find]
include = ["battery_feature_lab*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
